# mailman

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp  request.cpp  testing_server.py  validator.cpp
include/: get.h  parsing.h  post.h  processReq.h  request.h  validator.h
scripts/: run.sh  testing_server.py
src/: get.cpp  main.cpp  parsing.cpp  post.cpp  processReq.cpp  request.cpp  validator.cpp
